--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 langchain
 torch
 accelerate
-sentence_transformers
-streamlit_chat
+sentence-transformers
+streamlit-chat
 streamlit
 faiss-cpu
 tiktoken
 huggingface-hub
 pypdf
 llama-cpp-python
- 
+nltk
+PyPDF2
+python-dotenv
+paramiko
+langdetect
+googletrans==4.0.0-rc1
+transformers
